--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Roboto:wght@300;400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=GFS+Didot&display=swap");
+@font-face {
+  font-family: "avenir";
+  src: url("/font/avenir-font/Avenir\ Light.ttf");
+}
+@font-face {
+  font-family: "kepler";
+  src: url("/font/Kepler/keplerstd-light.otf");
+}
+@font-face {
+  font-family: "futura";
+  src: url("/font/futura/Futura\ Light.otf");
+}
 
 body {
   font-family: "Montserrat", sans-serif;
   scroll-behavior: smooth;
   overflow-x: hidden;
+}
+
+.background-dark {
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 .txt-secondary {
@@ -359,6 +375,67 @@ p {
   padding: 11px 0px;
 }
 
+/* Website Builder Page */
+.website-home {
+  background-image: url("./../../img/website-builder-img.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0 100px;
+  height: 700px;
+}
+
+.website-home-body {
+  height: 700px;
+}
+
+.website-home-body h1 {
+  margin-top: 100px;
+  font-family: "kepler", serif;
+  font-size: 60px;
+}
+
+.website-home-body .description p {
+  font-family: "avenir", sans-serif;
+  font-size: 19px !important;
+}
+
+.btn-buat-sekarang {
+  letter-spacing: 2px;
+  outline: none;
+  border: 2px solid white;
+}
+
+/* Proefesional Blog */
+.profesional-blog {
+  /* height: 600px; */
+  padding: 100px 0px;
+}
+.profesional-blog-title {
+  width: 50%;
+  height: 500px;
+  padding-left: 115px;
+}
+
+.profesional-blog-img {
+  width: 50%;
+}
+.profesional-blog-img img {
+  width: 60%;
+  z-index: 3;
+}
+
+.profesional-blog-title h1 {
+  font-family: "kepler", serif;
+  font-size: 50px;
+}
+
+.profesional-blog-title p {
+  font-family: "avenir", sans-serif;
+  font-size: 19px !important;
+  position: relative;
+  z-index: 3;
+}
+
 /* Footer */
 .img-footer {
   width: 4%;
@@ -376,6 +453,7 @@ footer {
 .footer-body a {
   font-size: 14px;
   color: #949494;
+  font-family: "futura", sans-serif;
 }
 
 footer .media-social-icon i {
@@ -590,6 +668,53 @@ footer .media-social-icon i {
 
   .input-group-contact input {
     width: 100%;
+  }
+
+  /* Website Builder Page */
+
+  .website-home {
+    background-size: cover;
+    background-position: -330px 80px;
+  }
+  .website-home,
+  .website-home-body {
+    height: 520px;
+  }
+
+  .website-home-body h1 {
+    font-size: 40px;
+  }
+
+  .profesional-blog {
+    flex-direction: column;
+    padding: 12px 20px;
+    height: 0px;
+  }
+
+  .profesional-blog-title {
+    order: 2;
+    width: 100%;
+    padding: 0px;
+    justify-content: start !important;
+  }
+
+  .profesional-blog-title h1 {
+    font-size: 35px;
+  }
+
+  .profesional-blog-title p {
+    font-size: 20px !important;
+  }
+
+  .profesional-blog-img {
+    width: 100%;
+    margin-bottom: 30px;
+    text-align: center;
+  }
+
+  .profesional-blog-img img {
+    position: relative !important;
+    width: 90%;
   }
 
   /* Footer */
