--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,105 @@ p {
   font-size: 18px;
 }
 
+/* Menu Toggle Start */
+.menu {
+  width: 43px;
+  height: 43px;
+  display: flex;
+  background-color: white;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  transition: transform 330ms ease-out;
+  display: none;
+  padding: 5px;
+  position: fixed;
+  right: 12px;
+  top: 20px;
+  z-index: 1050;
+  opacity: 0.5;
+}
+.wrapper-menu {
+  width: 43px;
+  height: 43px;
+  display: flex;
+  background-color: white;
+  flex-direction: column;
+  justify-content: space-between;
+  cursor: pointer;
+  transition: transform 330ms ease-out;
+  display: none;
+  padding: 5px;
+  position: fixed;
+  right: 12px;
+  top: 20px;
+  z-index: 1050;
+}
+
+.wrapper-menu.open {
+  transform: rotate(-45deg);  
+}
+
+.line-menu {
+  background-color: #43aed1;
+  border-radius: 5px;
+  width: 100%;
+  height: 5px;
+}
+
+.line-menu.half {
+  width: 50%;
+}
+
+.line-menu.start {
+  transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+  transform-origin: right;
+}
+
+.open .line-menu.start {
+  transform: rotate(-90deg) translateX(2px);
+}
+
+.line-menu.end {
+  align-self: flex-end;
+  transition: transform 330ms cubic-bezier(0.54, -0.81, 0.57, 0.57);
+  transform-origin: left;
+}
+
+.open .line-menu.end {
+  transform: rotate(-90deg) translateX(-3px);
+}
+/* Menu Toggle End */
+
+.mobile-nav {
+  position: fixed;
+  top: 0;
+  left: 100%;
+  width: 100%;
+  min-height: 100vh;
+  display: block;
+  z-index: 1040;
+  background-color: #43aed1;
+  display: none;
+  flex-direction: column;
+  text-align: center;
+  padding-top: 40px;
+  transition: 0.4s;
+}
+
+.mobile-nav.is-active {
+  left: 0;
+}
+
+.mobile-nav a,
+.mobile-nav span {
+  color: #fff;
+  font-family: "futura", sans-serif;
+  margin-bottom: 40px;
+  font-size: 20px;
+}
+
+
 .pagination-section {
   position: fixed;
   bottom: 35%;
@@ -714,6 +813,14 @@ footer .media-social-icon i {
   .item-nav,
   .item-nav:hover {
     border-top: none;
+  }
+
+  .mobile-nav {
+    display: flex;
+  }
+
+  .wrapper-menu {
+    display: flex;
   }
 
   .pagination-section {
