--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
 
 body {
   font-family: "Montserrat", sans-serif;
+  scroll-behavior: smooth;
 }
 
 .background-dark {
@@ -169,7 +170,7 @@ p {
 .pagination-section li a.active,
 .pagination-section li a:hover {
   background-color: #b5b5b5;
-  transition: .3s;
+  transition: 0.3s;
 }
 
 .item-nav {
@@ -268,18 +269,17 @@ p {
 
 /* about */
 .about-image {
-  position: relative;
-  height: 100%;
+  background-image: url(./../img/about-image.jpg);
+  background-size: contain;
+  background-position: 117px 55px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   width: 100%;
-  clip-path: inset(0);
+  height: 100%;
 }
 
-.about-image img {
-  object-fit: cover;
-  object-position: 50% 50%;
-  left: 0;
-  top: 0;
-  bottom: 0;
+.about-text-wrap {
+  height: 700px;
 }
 .about-text p {
   font-size: 18px;
@@ -936,6 +936,11 @@ footer .media-social-icon i {
     height: 450px;
   }
 
+  .hero,
+  .about-image{
+    transform: translate(0px, 0px) !important;
+  }
+
   .hero-body .description {
     width: 100%;
   }
@@ -957,14 +962,28 @@ footer .media-social-icon i {
     bottom: 25px;
   }
 
-  .about-image img {
-    height: 250px;
-    object-position: 50% 20%;
-    width: 100%;
+  .about {
+    padding: 30px 0px;
   }
+
+  .about-image-wrap {
+    height: 230px;
+  }
+
+  .about-image {
+    background-size: cover;
+    background-attachment: scroll;
+    background-position: center -48px;
+  }
+
   .about-text {
     padding-left: 0px !important;
   }
+
+  .about-text-wrap {
+    height: 467px;
+  }
+
   .about-text h1,
   .about-text p {
     text-align: center;
