--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,7 @@ p {
   font-size: 18px;
 }
 
+
 /* Menu Toggle Start */
 .wrapper-menu {
   width: 43px;
@@ -179,6 +180,10 @@ p {
   color: black;
 }
 
+.link-nav:visited{
+  color: black;
+}
+
 .item-nav.active:hover,
 .item-nav:hover {
   border-top: 4px solid #a9b2b6;
@@ -266,7 +271,7 @@ p {
 
 /* about */
 .about-image {
-  background-image: url(./../img/about-image.jpg);
+  background-image: url('./../img/about-image.jpg');
   background-size: contain;
   background-position: 117px 55px;
   background-repeat: no-repeat;
@@ -368,8 +373,17 @@ p {
 .projects {
   background-color: #fafafa;
   padding-top: 20px;
-  padding-bottom: 160px;
+  padding-bottom: 100px;
 }
+
+/* .projects img.lazy {
+  width: 100%;
+  height: 100%;
+  background-image: url('./../img/loading-gif.gif');
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+} */
+
 .projects-title h1 {
   width: 38%;
   line-height: 55px;
@@ -379,6 +393,10 @@ p {
   width: 55%;
 }
 
+.project-wrap {
+  display: none;
+}
+
 .projects-item {
   opacity: 0;
   height: 300px;
@@ -386,6 +404,10 @@ p {
   right: 0;
   z-index: 1;
   transition: 0.4s ease;
+}
+
+.hidden {
+  display: none;
 }
 
 .projects-item:hover {
