--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,25 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Roboto:wght@300;400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=GFS+Didot&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Roboto:wght@300;400;700&display=swap"); */
+@font-face {
+  font-family: 'Montserrat';
+  font-weight: normal;
+  src: url('./../font/Montserrat/static/Montserrat-Medium.ttf') 
+}
+@font-face {
+  font-family: 'Montserrat';
+  font-weight: bold;
+  src: url('./../font/Montserrat/static/Montserrat-Bold.ttf') 
+}
+@font-face {
+  font-family: 'Roboto';
+  font-weight: bold;
+  src: url('./../font/Roboto/Roboto-Bold.ttf') 
+}
+@font-face {
+  font-family: 'Roboto';
+  font-weight: normal;
+  src: url('./../font/Roboto/Roboto-Regular.ttf') 
+}
+
 @font-face {
   font-family: "avenir";
   src: url("/assets/font/avenir-font/Avenir\ Light.ttf");
@@ -149,7 +169,7 @@ p {
   left: unset;
   right: 21px;
   font-size: 30px;
-  z-index: 100;
+  z-index: 2;
 }
 
 .page-item {
@@ -286,6 +306,11 @@ p {
 .about-text-wrap {
   height: 700px;
 }
+
+.checklist-item span {
+  font-family: "Roboto";
+}
+
 .about-text p {
   font-size: 18px;
 }
@@ -293,6 +318,7 @@ p {
 .btn-start-now {
   padding: 11px 30px;
   letter-spacing: 2px;
+  font-weight: bold !important;
   font-family: "Roboto", sans-serif;
   font-size: 18px;
 }
@@ -507,7 +533,7 @@ p {
   top: 40%;
   font-size: 50px;
   cursor: pointer;
-  z-index: 100;
+  z-index: 1;
   text-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   transition: 0.4s;
 }
