--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@ body {
   }
 }
 
+/* Global variabel Start */
 .background-dark {
   background-color: rgba(0, 0, 0, 0.5);
 }
@@ -96,7 +97,9 @@ p {
   font-size: 18px;
 }
 
-/* Menu Toggle Start */
+/* Global variable End */
+
+/* Navbar Start */
 .wrapper-menu {
   width: 43px;
   height: 43px;
@@ -143,7 +146,7 @@ p {
 .open .line-menu.end {
   transform: rotate(-90deg) translateX(-3px);
 }
-/* Menu Toggle End */
+
 
 .mobile-nav {
   position: fixed;
@@ -179,41 +182,6 @@ p {
 
 .mobile-nav ul li ul {
   display: none;
-}
-
-.pagination-section {
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  bottom: 35%;
-  left: unset;
-  right: 21px;
-  font-size: 30px;
-  z-index: 2;
-}
-
-.page-item {
-  list-style-type: none;
-}
-
-.pagination-section li a,
-.pagination-section li a:link:hover,
-.pagination-section li a:visited,
-.pagination-section li a:visited:hover {
-  width: 12px;
-  height: 12px;
-  border: 2px solid #b5b5b5;
-  margin-bottom: 28px;
-  list-style-type: none;
-  display: block;
-}
-
-.pagination-section li a.active,
-.pagination-section li a:hover {
-  background-color: #b5b5b5;
-  transition: 0.3s;
 }
 
 .item-nav {
@@ -256,6 +224,43 @@ p {
   width: 25px;
   height: 25px;
   background-color: rgb(177, 177, 177);
+}
+
+/* Navbar End */
+
+.pagination-section {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  bottom: 35%;
+  left: unset;
+  right: 21px;
+  font-size: 30px;
+  z-index: 2;
+}
+
+.page-item {
+  list-style-type: none;
+}
+
+.pagination-section li a,
+.pagination-section li a:link:hover,
+.pagination-section li a:visited,
+.pagination-section li a:visited:hover {
+  width: 12px;
+  height: 12px;
+  border: 2px solid #b5b5b5;
+  margin-bottom: 28px;
+  list-style-type: none;
+  display: block;
+}
+
+.pagination-section li a.active,
+.pagination-section li a:hover {
+  background-color: #b5b5b5;
+  transition: 0.3s;
 }
 
 /* Hero */
