--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -393,20 +393,28 @@ p {
 }
 
 .button-subscribe {
-  padding: 12px 30px !important;
+  padding: 12px 30px;
   color: white;
-  background: black;
-  border: 2px solid black !important;
-  border-radius: 0px 4px 4px 0px !important;
+  background: black;  
+  border: 2px solid black;
+  border-radius: 0px 4px 4px 0px;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.button-subscribe:hover{
+  background-color: rgb(66, 65, 65);
+  border-color: rgb(66, 65, 65);
 }
 
 .input-subscribe {
-  border: 2px solid black !important;
-  border-radius: 4px 0px 0px 4px !important;
+  border: 2px solid black;
+  border-radius: 4px 0px 0px 4px;
 }
+
 .input-subscribe:focus {
   outline: none;
-  border: none;
+  border: 2px solid black;
   box-shadow: none;
 }
 
@@ -439,14 +447,6 @@ p {
   padding-bottom: 100px;
 }
 
-/* .projects img.lazy {
-  width: 100%;
-  height: 100%;
-  background-image: url('./../img/loading-gif.gif');
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-} */
-
 .projects-title h1 {
   width: 38%;
   line-height: 55px;
@@ -458,7 +458,7 @@ p {
 
 .projects-item {
   opacity: 0;
-  height: 300px;
+  height: 287px;
   left: 0;
   right: 0;
   z-index: 1;
@@ -476,8 +476,6 @@ p {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
 .projects-image img {
-  height: 300px;
-  object-fit: cover;
   width: 100%;
 }
 
@@ -829,6 +827,17 @@ h5 {
   background-color: transparent;
   border: 2px solid black;
   letter-spacing: 1px;
+  color: black;
+  transition: .3s;
+}
+
+.project-wrap {
+  cursor: pointer;
+}
+
+.btn-selengkapnya:hover {
+  background-color: black;
+  color: white;
 }
 
 .img-services {
@@ -863,7 +872,14 @@ h5 {
 .btn-make-schedule {
   outline: none;
   border: 1px solid black;
-  padding: 6px 23px;
+  padding: 10px 23px;
+  color: black;
+  transition: .3s;
+}
+
+.btn-make-schedule:hover{
+  background-color: black;
+  color: white;
 }
 
 /* Login page */
