--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Montserrat", sans-serif;
   scroll-behavior: smooth;
   animation: fadeInAnimation ease 0.5s;
   animation-iteration-count: 1;
